Improve performance, cleanup tests